# skeletor

./: .gitignore  LICENSE  README.md  skeletor.cabal
app/: DivideAndConquer.hs  IterativeCombine.hs  Notes.md
src/: Main.hs  Notes.md  Utils.hs
src/Bench/: MMult.hs  Sort.hs  SortSeq.hs
src/Control/: Cluster.hs  DivideAndConquer.hs  IterativeCombine.hs  Parallel.hs  TaskQueue.hs
src/Data/: Matrix.hs
