name:                skeletor
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/Abhiroop/skeletor#readme
license:             BSD3
license-file:        LICENSE
author:              Abhiroop Sarkar
maintainer:          asiamgenius@gmail.com
copyright:           Copyright (c) 2017-2018 Abhiroop Sarkar
category:            Data Structures
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/Abhiroop/skeletor#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Main
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable skeletor-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       abstract-deque
                     , base
                     , monad-par
                     , parallel
                     , random >= 1.1
                     , skeletor
                     , vector
  default-language:    Haskell2010

test-suite skeletor-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , skeletor
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Abhiroop/skeletor
